--- a/package.json
+++ b/package.json
@@ -8,29 +8,31 @@
   },
   "scripts": {
     "test": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/**/*.test.ts\"",
-    "start": "npm run build:ts && fastify start -l info dist/app.js",
+    "start": "npm run build:ts && fastify start --port 3001 -l info dist/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
     "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
-    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
+    "dev:start": "fastify start --port 3001 --ignore-watch=.ts$ -w -l info -P dist/app.js",
+    "proxy": "ory proxy http://localhost:3001/ --no-jwt --port 4000"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "fastify": "^4.0.0",
-    "fastify-plugin": "^4.0.0",
-    "@fastify/autoload": "^5.0.0",
-    "@fastify/sensible": "^5.0.0",
-    "fastify-cli": "^5.5.0"
+    "@fastify/autoload": "5.0.0",
+    "@fastify/cors": "8.1.0",
+    "@fastify/sensible": "5.0.0",
+    "@ory/cli": "0.1.44",
+    "@ory/client": "0.2.0-alpha.48",
+    "fastify": "4.0.0",
+    "fastify-cli": "5.5.0",
+    "fastify-plugin": "4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/tap": "^15.0.5",
-    "ts-node": "^10.4.0",
-    "concurrently": "^7.0.0",
-    "fastify-tsconfig": "^1.0.1",
-    "tap": "^16.1.0",
-    "typescript": "^4.5.4"
+    "@types/node": "18.0.0",
+    "@types/tap": "15.0.5",
+    "concurrently": "7.0.0",
+    "fastify-tsconfig": "1.0.1",
+    "tap": "16.1.0",
+    "ts-node": "10.4.0",
+    "typescript": "4.5.4"
   }
 }
