--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 ORY_SDK_URL=https://projects.oryapis.com
+SRB_MONGO_CONNECTION_URL=mongodb://test:root@127.0.0.1:27017/sms-reader
+SRB_MONGO_DB_NAME=sms-readr
