--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/**/*.test.ts\"",
-    "start": "npm run build:ts && fastify start --port 3001 -l info dist/app.js",
+    "test": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/**/env.test.ts\"",
+    "start": "npm run build:ts && fastify start --port 3001 -l info --plugin-timeout 60000 dist/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
     "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
@@ -24,7 +24,8 @@
     "@ory/client": "0.2.0-alpha.48",
     "fastify": "4.0.0",
     "fastify-cli": "5.5.0",
-    "fastify-plugin": "4.0.0"
+    "fastify-plugin": "4.0.0",
+    "mongoose": "6.6.2"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
