--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/sensible": "5.0.0",
     "@ory/cli": "0.1.44",
     "@ory/client": "0.2.0-alpha.48",
+    "@ory/keto-client": "0.10.0-alpha.0",
     "fastify": "4.0.0",
     "fastify-cli": "5.5.0",
     "fastify-plugin": "4.0.0",
