--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ ORY_SDK_URL=https://projects.oryapis.com
 SRB_MONGO_CONNECTION_URL=mongodb://test:root@127.0.0.1:27017/sms-reader
 SRB_MONGO_DB_NAME=sms-readr
 SMS_BACKEND_KETO_TOKEN=Bearer ory_pat_12345
+SMS_USE_HTTPS=false
