--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/**/env.test.ts\"",
-    "start": "npm run build:ts && fastify start --port 3001 -l info --plugin-timeout 60000 dist/app.js",
+    "start": "npm run build:ts && fastify start --port 3001 -l info --plugin-timeout 60000 --options dist/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
     "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
