--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 ORY_SDK_URL=https://projects.oryapis.com
-SRB_MONGO_CONNECTION_URL=mongodb://test:root@127.0.0.1:27017/sms-reader
-SRB_MONGO_DB_NAME=sms-readr
-SMS_BACKEND_KETO_TOKEN=Bearer ory_pat_12345
-SMS_USE_HTTPS=false
+ORY_KETO_TOKEN=Bearer ory_pat_12345
+ALERTMOON_MONGO_URL=mongodb://test:root@127.0.0.1:27017/sms-reader
+ALERTMOON_USE_HTTPS=false
