--- a/nginx/sites-available/alertmoon.com.conf
+++ b/nginx/sites-available/alertmoon.com.conf
@@ -2,19 +2,19 @@ server {
     listen 4444;
 
     # security
-    #include     nginxconfig.io/security.conf;
+    include     nginxconfig.io/security.conf;
 
     # logging
     access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
     error_log /var/log/nginx/error.log warn;
 
     # reverse proxy
-    location / {
+    location /api/kratos/public {
         proxy_pass http://kratos:4433/;
-        # proxy_set_header Host $host;
+        proxy_set_header Host $host;
         include nginxconfig.io/proxy.conf;
     }
 
     # additional config
-    #include nginxconfig.io/general.conf;
+    include nginxconfig.io/general.conf;
 }
