--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,138 @@ services:
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
 
+### Ory services
+
+  postgresd:
+    image: postgres:9.6
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=kratos
+      - POSTGRES_PASSWORD=secret
+      - POSTGRES_DB=kratos
+    networks:
+      - intranet
+
+  kratos-migrate:
+    image: oryd/kratos:v0.11.1
+    environment:
+      - DSN=postgres://kratos:secret@postgresd:5432/kratos?sslmode=disable&max_conns=20&max_idle_conns=4
+    volumes:
+      - type: volume
+        source: kratos-postgres
+        target: /var/lib/postgresql
+        read_only: false
+      - type: bind
+        source: ./kratos/email-password
+        target: /etc/config/kratos
+    command: -c /etc/config/kratos/kratos.yml migrate sql -e --yes
+    networks:
+      - intranet
+
+  kratos-selfservice-ui-node:
+    image: oryd/kratos-selfservice-ui-node:v0.11.1
+    ports:
+      - "4455:4455"
+    environment:
+      - KRATOS_PUBLIC_URL=http://kratos:4433/
+      - KRATOS_BROWSER_URL=http://127.0.0.1:4444/api/kratos/public
+      - PORT=4455
+      - SECURITY_MODE=
+    networks:
+      - intranet
+
+  kratos:
+    depends_on:
+      - kratos-migrate
+    image: oryd/kratos:v0.11.1
+    ports:
+      - '4433:4433' # public
+      - '4434:4434' # admin
+    restart: unless-stopped
+    environment:
+      - DSN=postgres://kratos:secret@postgresd:5432/kratos?sslmode=disable&max_conns=20&max_idle_conns=4
+      - LOG_LEVEL=trace
+    command: serve -c /etc/config/kratos/kratos.yml --dev --watch-courier
+    volumes:
+      - type: volume
+        source: kratos-postgres
+        target: /var/lib/postgresql
+      - type: bind
+        source: ./kratos/email-password
+        target: /etc/config/kratos
+    networks:
+      - intranet
+
+  mailslurper:
+    image: oryd/mailslurper:latest-smtps
+    ports:
+      - '4436:4436'
+      - '4437:4437'
+    networks:
+      - intranet
+
+  keto-migrate:
+    image: oryd/keto:v0.10.0-alpha.0
+    volumes:
+      - type: volume
+        source: kratos-postgres
+        target: /var/lib/postgresql
+        read_only: false
+      - type: bind
+        source: ./keto
+        target: /home/ory
+    environment:
+      - LOG_LEVEL=debug
+      - DSN=postgres://kratos:secret@postgresd:5432/accesscontroldb?sslmode=disable&max_conns=20&max_idle_conns=4
+    command: ["migrate", "up", "-y"]
+    networks:
+      - intranet
+
+  keto:
+    image: oryd/keto:v0.10.0-alpha.0
+    ports:
+      - "4466:4466"
+      - "4467:4467"
+    depends_on:
+      - keto-migrate
+    command: serve -c /home/ory/keto.yml
+    volumes:
+      - type: bind
+        source: ./keto
+        target: /home/ory
+    networks:
+      - intranet
+
+### Reverse proxy
+
+  nginx:
+    image: nginx:1.23.3
+    ports:
+      - 4444:4444
+    volumes:
+      - type: bind
+        source: ./nginx/nginxconfig.io
+        target: /etc/nginx/nginxconfig.io
+      - type: bind
+        source: ./nginx/sites-available/alertmoon.com.conf
+        target: /etc/nginx/sites-available/alertmoon.com.conf
+      - type: bind
+        source: ./nginx/sites-available/alertmoon.com.conf
+        target: /etc/nginx/sites-enabled/alertmoon.com.conf
+      - type: bind
+        source: ./nginx/nginx.conf
+        target: /etc/nginx/nginx.conf
+      # - ./ssl:/ssl/
+    networks:
+      - intranet
+
 networks:
+  intranet:
   default:
     external:
       name: sms-reader-backend-net
 
 volumes:
+  kratos-postgres:
   mongodb:
