--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "6.6.2"
   },
   "devDependencies": {
+    "@ory/keto-namespace-types": "0.10.0-alpha.0",
     "@types/node": "18.0.0",
     "@types/tap": "15.0.5",
     "concurrently": "7.0.0",
