--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,14 +7,20 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
+
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build the Docker image
-        run: docker build . --tag metastasis/alertmoon-backend:$(date +%s)
+        run: docker build . --tag ${{ secrets.DOCKERHUB_USERNAME }}/alertmoon-backend:latest
+
       - name: Push the Docker image
-        run: docker push -u metastasis
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/alertmoon-backend:latest
