--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Show default environment variables
+        run: |
+          echo "NODE_ENV=${{ vars.NODE_ENV }}"
+
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -24,13 +28,13 @@ jobs:
         uses: martinbeentjes/npm-get-version-action@main
 
       - name: Build the Docker image
-        run: docker build . --tag ${{ secrets.DOCKERHUB_USERNAME }}/alertmoon-backend:${{ steps.package-version.outputs.current-version}}
+        run: docker build . --build-arg NODE_ENV=${{ vars.NODE_ENV }} --tag ${{ secrets.DOCKERHUB_USERNAME }}/alertmoon-backend:${{ steps.package-version.outputs.current-version}}
 
       - name: Push the Docker image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/alertmoon-backend:${{ steps.package-version.outputs.current-version}}
 
       - name: Build the Docker image (latest)
-        run: docker build . --tag ${{ secrets.DOCKERHUB_USERNAME }}/alertmoon-backend:latest
+        run: docker build . --build-arg NODE_ENV=${{ vars.NODE_ENV }} --tag ${{ secrets.DOCKERHUB_USERNAME }}/alertmoon-backend:latest
 
       - name: Push the Docker image (latest)
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/alertmoon-backend:latest
