--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ ORY_SDK_URL=https://projects.oryapis.com
 ORY_KETO_TOKEN=Bearer ory_pat_12345
 ALERTMOON_MONGO_URL=mongodb://test:root@127.0.0.1:27017/sms-reader
 ALERTMOON_USE_HTTPS=false
+JAEGER_AGENT_HOST=http://127.0.0.1:16686
