--- a/package.json
+++ b/package.json
@@ -18,9 +18,21 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@autotelic/fastify-opentelemetry": "0.17.1",
     "@fastify/autoload": "5.0.0",
     "@fastify/cors": "8.1.0",
     "@fastify/sensible": "5.0.0",
+    "@opentelemetry/api": "1.4.1",
+    "@opentelemetry/auto-instrumentations-node": "0.36.5",
+    "@opentelemetry/exporter-trace-otlp-grpc": "0.38.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.37.0",
+    "@opentelemetry/instrumentation": "0.37.0",
+    "@opentelemetry/instrumentation-http": "0.37.0",
+    "@opentelemetry/resources": "1.11.0",
+    "@opentelemetry/sdk-metrics": "1.11.0",
+    "@opentelemetry/sdk-node": "0.37.0",
+    "@opentelemetry/sdk-trace-web": "1.11.0",
+    "@opentelemetry/semantic-conventions": "1.11.0",
     "@ory/cli": "0.1.44",
     "@ory/client": "0.2.0-alpha.48",
     "@ory/keto-client": "0.10.0-alpha.0",
